--- a/generators/common/templates/sonar-project.properties.ejs
+++ b/generators/common/templates/sonar-project.properties.ejs
@@ -1,5 +1,5 @@
-sonar.projectKey=lnngle-alain
-sonar.projectName=lnngle-alain
+sonar.projectKey=<%= dasherizedBaseName %>
+sonar.projectName=<%= dasherizedBaseName %>
 sonar.projectVersion=1.0
 
 sonar.sources=src/main/
