--- a/generators/client/templates/alain/src/main/webapp/assets/i18n/en-us/global.json.ejs
+++ b/generators/client/templates/alain/src/main/webapp/assets/i18n/en-us/global.json.ejs
@@ -1,7 +1,7 @@
 {
   "global": {
-    "title": "Lnngle Alain",
-    "description": "Lnngle Alain",
+    "title": "<%= capitalizedBaseName %>",
+    "description": "<%= capitalizedBaseName %>",
     "copyright": "2021 lnngle", 
     "browsehappy": "You are using an <strong>outdated</strong> browser. Please <a href=\"http://browsehappy.com/?locale=en\">upgrade your browser</a> to improve your experience.",
     "menu": {
