--- a/generators/client/templates/alain/src/main/webapp/assets/i18n/zh-cn/global.json.ejs
+++ b/generators/client/templates/alain/src/main/webapp/assets/i18n/zh-cn/global.json.ejs
@@ -1,7 +1,7 @@
 {
   "global": {
-    "title": "Lnngle Alain",
-    "description": "Lnngle Alain",
+    "title": "<%= capitalizedBaseName %>",
+    "description": "<%= capitalizedBaseName %>",
     "copyright": "2021 lnngle", 
     "browsehappy": "您目前使用<strong>过于老旧</strong>的浏览器, 建议您<a href=\"http://browsehappy.com/?locale=en\">升级浏览器</a>让您有更佳的上网体验.",
     "menu": {
