--- a/generators/client/templates/alain/src/main/webapp/app/shared/constants/global-constant.ts.ejs
+++ b/generators/client/templates/alain/src/main/webapp/app/shared/constants/global-constant.ts.ejs
@@ -1,6 +1,6 @@
 export class TableConst {
   static readonly paging = { pi: 'page', ps: 'size' };
-  static readonly resultConvert = { list: 'body', total: 'total' };
+  static readonly resultConvert = { list: 'data', total: 'total' };
 }
 
 export class RoutesApi {
