--- a/generators/entity-i18n/templates/i18n/entity_zh-cn.json.ejs
+++ b/generators/entity-i18n/templates/i18n/entity_zh-cn.json.ejs
@@ -1,18 +1,8 @@
 {
-    "<%= entityTranslationKey %>": {
-      "title": "<%= entityClassPluralHumanized %>管理",
-      "form": {
-        <% for (idx in fields) {
-            if (typeof fields[idx].javadoc !== 'undefined') ++helpBlocks; %>,
-            "<%= fields[idx].fieldName %>": "<%= fields[idx].fieldNameHumanized %>"<% } %><% for (idx in relationships) { %>,
-            "<%= relationships[idx].relationshipName %>": "<%= relationships[idx].relationshipNameHumanized %>"<% } if (helpBlocks > 0) { %>,
-            "help": {<% for (idx in fields) {
-                if (fields[idx].javadoc) {
-                    --helpBlocks; %>
-                "<%= fields[idx].fieldName %>": "<%= fields[idx].javadoc %>"<% if (helpBlocks > 0) { %>,<% }
-                }
-            } %>
-            }<% } %>
-      }
+  "<%= entityTranslationKey %>": {
+    "title": "<%= entityClassPluralHumanized %>管理",
+    "form": {<% for (idx in fields) {%>
+      "<%= fields[idx].fieldName %>": "<%= fields[idx].fieldNameHumanized %>",<%}%>
     }
   }
+}
