--- a/generators/entity-client/templates/alain/src/main/webapp/app/routes/entities/view/view.component.html.ejs
+++ b/generators/entity-client/templates/alain/src/main/webapp/app/routes/entities/view/view.component.html.ejs
@@ -3,16 +3,13 @@
 </div>
 <nz-spin *ngIf="!i" class="modal-spin"></nz-spin>
 <div sv-container *ngIf="i">
-  <sv label="{{ 'global.field.id' | i18n }}">{{ i.id }}</sv>
-  <sv label="{{ 'demo.form.login' | i18n }}">{{ i.login }}</sv>
-  <sv label="{{ 'demo.form.firstName' | i18n }}">{{ i.firstName }}</sv>
-  <sv label="{{ 'demo.form.lastName' | i18n }}">{{ i.lastName }}</sv>
-  <sv label="{{ 'demo.form.email' | i18n }}">{{ i.email }}</sv>
-  <sv label="{{ 'demo.form.activated' | i18n }}">{{ i.activated }}</sv>
-  <sv label="{{ 'demo.form.createdBy' | i18n }}">{{ i.createdBy }}</sv>
-  <sv label="{{ 'demo.form.createdDate' | i18n }}">{{ i.createdDate }}</sv>
-  <sv label="{{ 'demo.form.lastModifiedBy' | i18n }}">{{ i.lastModifiedBy }}</sv>
-  <sv label="{{ 'demo.form.lastModifiedDate' | i18n }}">{{ i.lastModifiedDate }}</sv>
+<%_
+  for (field of fields.filter(field => !field.hidden)) {
+    const fieldName = field.fieldName;
+    const fieldType = field.fieldType;
+_%> 
+<sv label="{{ '<%= entityTranslationKey %>.form.<%= fieldName %>' | i18n }}">{{ i.<%= fieldName %> }}</sv>
+<%_ } _%> 
 </div>
 <div class="modal-footer">
   <button nz-button type="button" (click)="close()">{{ 'global.action.close' | i18n }}</button>
