--- a/generators/client/templates/alain/src/main/webapp/app/core/menu/menu-data.service.ts.ejs
+++ b/generators/client/templates/alain/src/main/webapp/app/core/menu/menu-data.service.ts.ejs
@@ -36,7 +36,9 @@ export class MenuDataService {
           i18n: 'global.menu.entities.main',
           icon: { type: 'icon', value: 'menu-unfold' },
           link: '',
-          children: []
+          children: [
+          // jhipster-needle-add-component-to-menu
+          ]
         }
       ]
     }
