--- a/generators/client/templates/alain/src/main/webapp/app/routes/entities/entities.module.ts.ejs
+++ b/generators/client/templates/alain/src/main/webapp/app/routes/entities/entities.module.ts.ejs
@@ -2,8 +2,10 @@ import { NgModule, Type } from '@angular/core';
 import { SharedModule } from '@shared';
 
 import { EntitiesRoutingModule } from './entities-routing.module';
+// jhipster-needle-add-component-to-module-import
 
 const COMPONENTS: Array<Type<void>> = [
+  // jhipster-needle-add-component-to-module
   ];
 
 @NgModule({
