--- a/generators/client/templates/alain/src/main/webapp/app/shared/constants/global-constant.ts.ejs
+++ b/generators/client/templates/alain/src/main/webapp/app/shared/constants/global-constant.ts.ejs
@@ -13,4 +13,5 @@ export class RoutesApi {
   static readonly account_change_password = `${RoutesApi.api_prefix}/account/change-password`;
   static readonly authorities = `${RoutesApi.api_prefix}/authorities`;
   static readonly users = `${RoutesApi.api_prefix}/admin/users/`;
+  // jhipster-needle-add-api-to-constants
 }
