--- a/generators/client/templates/alain/src/main/webapp/app/routes/entities/entities-routing.module.ts.ejs
+++ b/generators/client/templates/alain/src/main/webapp/app/routes/entities/entities-routing.module.ts.ejs
@@ -1,7 +1,11 @@
 import { NgModule } from '@angular/core';
 import { RouterModule, Routes } from '@angular/router';
 
-const routes: Routes = [];
+// jhipster-needle-add-component-to-routing-import
+
+const routes: Routes = [
+// jhipster-needle-add-component-to-routing
+];
 
 @NgModule({
   imports: [RouterModule.forChild(routes)],
