--- a/generators/client/templates/alain/_mock/index.ts.ejs
+++ b/generators/client/templates/alain/_mock/index.ts.ejs
@@ -1,6 +1,7 @@
 /*Open when using mock data*/
 export * from './_account';
 export * from './_user';
+// jhipster-needle-add-entity-mock-data
 
-/*Open when mock data is not used*/
+/*Close when mock data is not used*/
 //export {};
